fix db connection and gradle build